--- a/hugo.yaml
+++ b/hugo.yaml
@@ -90,7 +90,7 @@ params:
 
   assets:
     disableHLJS: true
-       favicon: "files/favicon.png"
+       favicon: "files/favicon.ico"
   #     favicon16x16: "<link / abs url>"
   #     favicon32x32: "<link / abs url>"
   #     apple_touch_icon: "<link / abs url>"
