--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,7 +24,7 @@ languages:
 
     params:
       languageAltTitle: English
-      homeInfoParams:
+      profileMode:
         enabled: true
         title: Artur Sendyka
         imageUrl: "https://media.licdn.com/dms/image/C4E03AQH3mwq9h9krQg/profile-displayphoto-shrink_200_200/0/1634480045983?e=2147483647&v=beta&t=ztkyk0oZDXt_jd2lRqJU-f5Ze2ddIeYllVI1bnyIF7k"
@@ -39,6 +39,8 @@ languages:
             url: files/AS2025.pdf
           - name: Portfolio
             url: portfolio
+          - name: Blog
+            url: /posts
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
