--- a/hugo.yaml
+++ b/hugo.yaml
@@ -100,7 +100,7 @@ params:
 
   assets:
     disableHLJS: true
-    favicon: "/assets/favicon.ico"
+    favicon: "/static/assets/favicon.ico"
   #     favicon16x16: "<link / abs url>"
   #     favicon32x32: "<link / abs url>"
   #     apple_touch_icon: "<link / abs url>"
